--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@loopback/rest": "^1.4.0",
     "@loopback/rest-explorer": "^1.1.2",
     "@loopback/service-proxy": "^1.0.3",
-    "loopback-connector-postgresql": "^3.5.0"
+    "loopback-connector-postgresql": "^3.5.0",
+    "ytdl-core": "^0.28.0"
   },
   "devDependencies": {
     "@loopback/build": "^1.0.1",
